<resources>
    <string name="app_name">XRxJava2Study</string>
    <string name="doSomeWork">doSomeWork</string>
    <string name="operators">Operators</string>
    <string name="networking">Networking</string>
    <string name="pagination">Pagination</string>
    <string name="search">Search</string>
    <string name="simple">Simple</string>
    <string name="map">Map</string>
    <string name="zip">Zip</string>
    <string name="disposable">Disposable</string>
    <string name="take">Take</string>
    <string name="timer">Timer</string>
    <string name="interval">Interval</string>
    <string name="SingleObserver">SingleObserver</string>
    <string name="CompletableObserver">CompletableObserver</string>
    <string name="Flowable">Flowable</string>
    <string name="reduce">Reduce</string>
    <string name="buffer">Buffer</string>
    <string name="filter">Filter</string>
    <string name="skip">Skip</string>
    <string name="scan">Scan</string>
    <string name="replay">Replay</string>
    <string name="concat">Concat</string>
    <string name="merge">Merge</string>
    <string name="defer">Defer</string>
    <string name="distinct">Distinct</string>
    <string name="last">Last</string>
    <string name="replay_subject">ReplaySubject</string>
    <string name="publish_subject">PublishSubject</string>
    <string name="behavior_subject">BehaviorSubject</string>
    <string name="async_subject">AsyncSubject</string>
    <string name="throttle_last">ThrottleLast</string>
    <string name="debounce">Debounce</string>
    <string name="window">Window</string>
    <string name="delay">delay</string>
    <string name="throttle_first">ThrottleFirst</string>
    <string name="flatMapAndFilter">flatMapAndFilter</string>
    <string name="flatMap">flatMap</string>
    <string name="flatMapWithZip">flatMapWithZip</string>
    <string name="click_me">Click Me</string>
    <string name="rx_bus">RxBus</string>
    <string name="compose">Compose for reusable</string>
    <string name="result">Result</string>
    <string name="switch_map">Switch Map</string>
</resources>
