<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zhxh.rxjava2.samples.ui.OperatorsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startSimpleActivity"
            android:text="@string/simple"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startMapActivity"
            android:text="@string/map"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startZipActivity"
            android:text="@string/zip"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startDisposableActivity"
            android:text="@string/disposable"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startTakeActivity"
            android:text="@string/take"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startTimerActivity"
            android:text="@string/timer"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startIntervalActivity"
            android:text="@string/interval"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startSingleObserverActivity"
            android:text="@string/SingleObserver"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startCompletableObserverActivity"
            android:text="@string/CompletableObserver"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startFlowableActivity"
            android:text="@string/Flowable"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startReduceActivity"
            android:text="@string/reduce"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startBufferActivity"
            android:text="@string/buffer"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startFilterActivity"
            android:text="@string/filter"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startSkipActivity"
            android:text="@string/skip"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startScanActivity"
            android:text="@string/scan"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startReplayActivity"
            android:text="@string/replay"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startConcatActivity"
            android:text="@string/concat"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startMergeActivity"
            android:text="@string/merge"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startDeferActivity"
            android:text="@string/defer"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startDistinctActivity"
            android:text="@string/distinct"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startLastOperatorActivity"
            android:text="@string/last"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startReplaySubjectActivity"
            android:text="@string/replay_subject"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startPublishSubjectActivity"
            android:text="@string/publish_subject"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startBehaviorSubjectActivity"
            android:text="@string/behavior_subject"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startAsyncSubjectActivity"
            android:text="@string/async_subject"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startThrottleFirstActivity"
            android:text="@string/throttle_first"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startThrottleLastActivity"
            android:text="@string/throttle_last"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startDebounceActivity"
            android:text="@string/debounce"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startWindowActivity"
            android:text="@string/window"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startDelayActivity"
            android:text="@string/delay"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startSwitchMapActivity"
            android:text="@string/switch_map"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

    </LinearLayout>
</ScrollView>
